# project-9-django-web-LITRevu

./: .gitignore  Liste users.txt  README.md  db.sqlite3  list users.txt  package-lock.json  package.json  pyproject.toml  requirements.txt  toto.txt
LITRevu/: settings.py  urls.py
authentication/: forms.py  models.py  views.py
authentication/migrations/: 0001_initial.py  0002_alter_user_profile_photo_alter_user_role.py  0003_user_follows.py  0004_remove_user_profile_photo_remove_user_role_and_more.py
authentication/templates/authentication/: login.html  password_change_done.html  password_change_form.html  signup.html
fotoblog/: settings.py
review/: admin.py  forms.py  models.py  unfollow.py  views.py  widgets.py
review/migrations/: 0001_initial.py  0002_alter_review_options_alter_ticket_options.py  0003_rename_time_created_review_created_and_more.py  0004_rename_time_created_ticket_created.py  0005_alter_review_options_alter_ticket_options.py
review/static/review/css/: styles.css
review/templates/review/: _form_image.html  _form_review.html  _form_ticket.html  _review.html  _stars.html  _ticket.html  create_review.html  create_ticket.html  delete_review.html  delete_ticket.html  edit_review.html  edit_ticket.html  flux.html  follow_users_form.html  home.html  posts.html  reviews.html  stars_demo.html
review/templatetags/: review_extras.py
templates/: base.html
